--- a/geom/RunMtest.in
+++ b/geom/RunMtest.in
@@ -77,7 +77,7 @@ esac
 
 # enhance various paths to find our stuff
 libpath="${MOD_PATH}"
-PATH="${buildbase}/testing/src:$PATH"
+PATH="${buildbase}/MonetDB$V/src/tools:${buildbase}/testing/src:$PATH"
 export PATH
 
 chmod +x ${buildbase}/testing/src/Mlog
