--- a/MonetDB5/src/extras/xml/Makefile.ag
+++ b/MonetDB5/src/extras/xml/Makefile.ag
@@ -18,6 +18,7 @@
 INCLUDES = ../../mal \
 	../../../../MonetDB/src/common \
 	../../../../MonetDB/src/gdk \
+	../../../../common/stream \
 	$(libxml2_CFLAGS)
 MTSAFE
 
