--- a/MonetDB5/src/optimizer/Makefile.ag
+++ b/MonetDB5/src/optimizer/Makefile.ag
@@ -18,6 +18,7 @@
 INCLUDES = -I../mal -I../modules/atoms -I../modules/mal -I../modules/kernel \
 	../../../clients/src/mapilib \
 	../../../MonetDB/src/common \
+	../../../common/stream \
 	../../../MonetDB/src/gdk
 
 
