--- a/MonetDB4/src/modules/calibrator/Makefile.ag
+++ b/MonetDB4/src/modules/calibrator/Makefile.ag
@@ -15,7 +15,7 @@
 # Copyright August 2008-2011 MonetDB B.V.
 # All Rights Reserved.
 
-INCLUDES = -I../../monet ../../../../MonetDB/src/common \
+INCLUDES = -I../../monet ../../../../MonetDB/src/common ../../../../common/stream \
 	../../../../MonetDB/src/gdk $(HWCOUNTERS_INCS) 
 MTSAFE
 
