--- a/MonetDB5/src/modules/mal/Makefile.ag
+++ b/MonetDB5/src/modules/mal/Makefile.ag
@@ -18,6 +18,7 @@
 INCLUDES = -I../../mal -I../atoms -I../kernel \
 	../../../../clients/src/mapilib \
 	../../../../MonetDB/src/common \
+	../../../../common/stream \
 	../../../../MonetDB/src/gdk \
 	$(pcre_CFLAGS) $(zlib_CFLAGS) $(BZIP_INCS)
 
