--- a/clients/src/mapilib/Makefile.ag
+++ b/clients/src/mapilib/Makefile.ag
@@ -17,11 +17,11 @@
 
 MTSAFE
 
-INCLUDES = ../../../MonetDB/src/common $(openssl_CFLAGS)
+INCLUDES = ../../../MonetDB/src/common ../../../common/stream $(openssl_CFLAGS)
 
 lib_Mapi = {
 	SOURCES = Mapi.mx Mapi.rc
-	LIBS = $(SOCKET_LIBS) ../../../MonetDB/src/common/libstream \
+	LIBS = $(SOCKET_LIBS) ../../../common/stream/libstream \
 		../../../MonetDB/src/common/libmutils $(openssl_LIBS)
 }
 
