--- a/geom/src/monetdb5/Makefile.ag
+++ b/geom/src/monetdb5/Makefile.ag
@@ -16,7 +16,8 @@
 # All Rights Reserved.
 
 MTSAFE
-INCLUDES = ../../../MonetDB/src/common ../../../MonetDB/src/gdk \
+INCLUDES = ../../../MonetDB/src/common ../../../common/stream \
+	../../../MonetDB/src/gdk \
 	../../../MonetDB5/src/modules/atoms \
 	../../../MonetDB5/src/compiler \
 	../../../MonetDB5/src/modules/kernel \
@@ -30,7 +31,7 @@ lib__geom = {
 	DIR = libdir/MonetDB5
 	SOURCES = geom.mx
 	LIBS = ../../../MonetDB/src/gdk/libbat \
-	       ../../../MonetDB/src/common/libstream \
+	       ../../../common/stream/libstream \
 	       ../../../MonetDB5/src/tools/libmonetdb5 \
 	       $(GEOS_LIBS) ../lib/libgeom
 }
