--- a/pathfinder/modules/pftijah/Makefile.ag
+++ b/pathfinder/modules/pftijah/Makefile.ag
@@ -37,6 +37,7 @@ INCLUDES = \
 	../../../MonetDB4/src \
 	../../../MonetDB4/src/modules/calibrator \
 	../../../MonetDB/src/common \
+	../../../common/stream \
 	../../../MonetDB/src/gdk \
 	$(libxml2_CFLAGS)
 PF_LIBS = $(libxml2_LIBS) $(DL_LIBS)
@@ -106,7 +107,7 @@ lib__pftijah = {
 		../../runtime/libserialize \
 		../../runtime/lib_pf_support $(PF_LIBS) \
 		../../../MonetDB/src/gdk/libbat \
-		../../../MonetDB/src/common/libstream \
+		../../../common/stream/libstream \
 		../../../MonetDB4/src/monet/libmonet \
 		../../../MonetDB4/src/modules/plain/lib_streams \
 		../../../MonetDB4/src/modules/plain/lib_builtin \
