--- a/sql/src/backends/monet5/Makefile.ag
+++ b/sql/src/backends/monet5/Makefile.ag
@@ -31,6 +31,7 @@ INCLUDES = ../../include ../../common ../../storage ../../server \
 	$(RDF_INC) \
 	../../../../clients/src/mapilib \
 	../../../../MonetDB/src/common \
+	../../../../common/stream \
 	../../../../MonetDB/src/gdk \
 	$(READLINE_INCS)
 
@@ -49,7 +50,7 @@ lib__sql = {
 	LIBS = ../../server/libsqlserver ../../storage/libstore ../../storage/bat/libbatstore ../../storage/restrict/librestrictstore ../../storage/bpm/libbpmstore ../../common/libsqlcommon \
 		../../../../MonetDB5/src/tools/libmonetdb5 \
 		../../../../MonetDB/src/gdk/libbat \
-		../../../../MonetDB/src/common/libstream \
+		../../../../common/stream/libstream \
 		$(READLINE_LIBS) $(PTHREAD_LIBS)
 }
 
@@ -61,7 +62,7 @@ lib_embeddedsql5 = {
 		../../../../MonetDB/src/gdk/libbat \
 		../../../../clients/src/mapilib/libMapi \
 		../../../../MonetDB/src/common/libmutils \
-		../../../../MonetDB/src/common/libstream \
+		../../../../common/stream/libstream \
 		$(READLINE_LIBS) $(PTHREAD_LIBS)
 }
 
@@ -72,7 +73,7 @@ bin_Mbeddedsql5 = {
 		../../../../MonetDB/src/gdk/libbat \
 		../../../../clients/src/mapilib/libMapi \
 		../../../../MonetDB/src/common/libmutils \
-		../../../../MonetDB/src/common/libstream \
+		../../../../common/stream/libstream \
 		$(READLINE_LIBS) $(PTHREAD_LIBS) $(curl_LIBS)
 }
 
