--- a/sql/src/backends/monet5/merovingian/client/Makefile.ag
+++ b/sql/src/backends/monet5/merovingian/client/Makefile.ag
@@ -29,7 +29,8 @@ INCLUDES = \
 	../../../../../../MonetDB5/src/scheduler \
 	../../../../../../MonetDB/src/common \
 	../../../../../../MonetDB/src/gdk \
-	-I../utils
+	../../../../../../common/stream \
+	../utils
 
 EXTRA_DIST = $(man_MANS)
 
@@ -41,7 +42,7 @@ bin_monetdb = {
 		$(UUID_LIBS) \
 		../../../../../../MonetDB5/src/tools/libmonetdb5 \
 		../../../../../../MonetDB/src/gdk/libbat \
-		../../../../../../MonetDB/src/common/libstream \
+		../../../../../../common/stream/libstream \
 		$(curl_LIBS) \
 		$(SOCKET_LIBS) \
 		$(MALLOC_LIBS)
