--- a/sql/src/backends/monet5/vaults/Makefile.ag
+++ b/sql/src/backends/monet5/vaults/Makefile.ag
@@ -25,6 +25,7 @@ INCLUDES = ../../../include ../../../common ../../../storage ../../../server .. 
 	../../../../../MonetDB5/src/scheduler \
 	../../../../../clients/src/mapilib \
 	../../../../../MonetDB/src/common \
+	../../../../../common/stream \
 	../../../../../MonetDB/src/gdk \
 	$(READLINE_INCS) $(MSEED_CFLAGS) $(CFITSIO_CFLAGS)
 
