--- a/sql/src/storage/bat/Makefile.ag
+++ b/sql/src/storage/bat/Makefile.ag
@@ -19,6 +19,7 @@
 
 INCLUDES = .. ../../include ../../common \
 	../../../../MonetDB/src/common \
+	../../../../common/stream \
 	../../../../MonetDB/src/gdk \
 	../../../../MonetDB5/src/modules/atoms \
 	../../../../MonetDB5/src/compiler \
