monet_utils: remove
Move content from monet_options.mx to monet_config.h and gdk.mx.
Effectuate removal, and change locations and includes where necessary.

Solved some issues that evolved out of getting rid of monet_utils, since
includes are done unconditionally for everything now.

--- a/MonetDB/src/common/Makefile.ag
+++ b/MonetDB/src/common/Makefile.ag
@@ -23,13 +23,13 @@ EXTRA_DIST = monet_getopt.h getopt.c getopt1.c memcmp.c valgrind.h
 
 lib_mutils = { 
 	NAME = mutils
-	SOURCES = monet_utils.mx monet_options.mx monet_getopt.h
+	SOURCES = monet_options.mx monet_getopt.h
 }
 
 headers_common = {
 	DIR = includedir/MonetDB/common
 	HEADERS = h
-	SOURCES = monet_utils.mx monet_options.mx monet_getopt.h \
+	SOURCES = monet_options.mx monet_getopt.h \
 	          dummy_gdk_utils.mx
 }
 
