dummy_gdk_utils.mx: remove
remove seemingly unused file

--- a/MonetDB/src/common/Makefile.ag
+++ b/MonetDB/src/common/Makefile.ag
@@ -29,8 +29,7 @@ lib_mutils = {
 headers_common = {
 	DIR = includedir/MonetDB/common
 	HEADERS = h
-	SOURCES = monet_options.mx monet_getopt.h \
-	          dummy_gdk_utils.mx
+	SOURCES = monet_options.mx monet_getopt.h
 }
 
 headers_pc = {
