--- a/NT/monetdb_config.h.in
+++ b/NT/monetdb_config.h.in
@@ -411,6 +411,9 @@
 /* Define to 1 if you have the <rlimit.h> header file. */
 /* #undef HAVE_RLIMIT_H */
 
+/* Define to 1 if you have the `round' function. */
+/* #undef HAVE_ROUND */
+
 /* Define if you have SAX2 support in libxml2. */
 #ifdef HAVE_LIBXML2
 #define HAVE_SAX2 1
@@ -602,6 +605,9 @@ typedef int socklen_t;
 
 /* Define to 1 if you have the <time.h> header file. */
 /* #undef HAVE_TIME_H */
+
+/* Define to 1 if you have the `trunc' function. */
+/* #undef HAVE_TRUNC */
 
 /* Define to 1 if you have the `uname' function. */
 /* #undef HAVE_UNAME */
