valgrind.h was removed

--- a/MonetDB/src/common/Makefile.ag
+++ b/MonetDB/src/common/Makefile.ag
@@ -19,7 +19,7 @@
 
 MTSAFE
 
-EXTRA_DIST = monet_getopt.h getopt.c getopt1.c memcmp.c valgrind.h
+EXTRA_DIST = monet_getopt.h getopt.c getopt1.c memcmp.c
 
 lib_mutils = { 
 	NAME = mutils
