--- a/NT/Makefile
+++ b/NT/Makefile
@@ -29,6 +29,9 @@ all: "$(SRCDIR)\Makefile.msc" monetdb_config.h unistd.h inttypes.h
 
 install: targetdirs all
 	$(MAKE) /nologo /f "$(SRCDIR)\Makefile.msc" "prefix=$(prefix)" "bits=$(bits)" install
+	$(INSTALL) ..\NT\installer$(bits)\*.sln "$(prefix)"
+	$(INSTALL) ..\NT\installer$(bits)\*.vdproj "$(prefix)"
+	-if exist "C:\Program Files (x86)" if $(bits)==32 C:\cygwin\bin\sed.exe -i "s/Program Files/Program Files (x86)/" "$(prefix)"\*.vdproj
 
 $(SRCDIR)\Makefile.msc: "$(SRCDIR)\Makefile.ag"
         cd "$(SRCDIR)"&&set PYTHONPATH=buildtools\autogen&&python buildtools\autogen\autogen.py
